--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "d3": "^7.9.0",
+    "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
