--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "d3": "^7.9.0",
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.3.1",
+    "react-animated-css-onscroll": "^1.2.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
