--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,4 @@ REACT_APP_AUTH_REQUEST=auth/tokens
 REACT_APP_ORDER=ecommerce/orders
 REACT_APP_PAYMENT_KEY=acceptance/payment_keys
 REACT_APP_INTEGRATION_ID=4555884
+REACT_APP_IFRAME_LINK="https://accept.paymob.com/api/acceptance/iframes/837898?payment_token="
