--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "d3": "^7.9.0",
+    "primereact": "^10.6.5",
     "react": "^18.3.1",
     "react-animated-css-onscroll": "^1.2.1",
     "react-bootstrap": "^2.10.2",
