--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
-    "programsApi": "http://localhost:8000/programs",
-    "Feedbacks":"http://localhost:8000/feedbacks",
-    "habitations":"http://localhost:8000/habitaions",
-    "usersApi": "http://localhost:8000/users"
+    "programsApi": "https://campass-json-server.onrender.com/programs",
+    "Feedbacks":"https://campass-json-server.onrender.com/feedbacks",
+    "habitations":"https://campass-json-server.onrender.com/habitaions",
+    "usersApi": "https://campass-json-server.onrender.com/users"
 }
